--- a/src/app/pages/components/home-page/home-page.component.html
+++ b/src/app/pages/components/home-page/home-page.component.html
@@ -1,1 +1,19 @@
-<p>home-page works!</p>
+<section class="center">
+  <div class="profile_animator_wrapper">
+    <div class="profile_img_wrapper">
+      <div class="img_bkg"></div>
+      <img
+        src="../../../../assets/Luka_Bilbao-Munios.jpg"
+        alt="Luka Bilbao-Munios head-shot"
+      />
+    </div>
+
+    <div class="blob_wrapper">
+      <div class="blob"></div>
+    </div>
+  </div>
+  <div class="info">
+    <h1>Luka Bilbao-Munios</h1>
+    <h2>Software Engineer</h2>
+  </div>
+</section>
