--- a/src/app/shared/components/nav/nav.component.scss
+++ b/src/app/shared/components/nav/nav.component.scss
@@ -11,6 +11,7 @@ nav {
       a {
         text-transform: uppercase;
         @include globals.fontSizing(16, 24);
+        display: inline-block;
         position: relative;
         padding: globals.pxToRem(10) globals.pxToRem(10);
         user-select: none;
