--- a/src/app/pages/components/home-page/home-page.component.html
+++ b/src/app/pages/components/home-page/home-page.component.html
@@ -14,6 +14,6 @@
   </div>
   <div class="info">
     <h1>Luka Bilbao-Munios</h1>
-    <h2>Software Engineer</h2>
+    <h2>Angular Developer</h2>
   </div>
 </section>
