--- a/src/app/pages/components/Education/Education.component.scss
+++ b/src/app/pages/components/Education/Education.component.scss
@@ -23,6 +23,10 @@ section.center {
     }
   }
 
+  cv-loader {
+    flex-grow: 1;
+  }
+
   @media screen and (max-width: 1100px) {
     margin-top: globals.pxToRem(0);
     flex-direction: column;
