--- a/src/styles.scss
+++ b/src/styles.scss
@@ -75,6 +75,8 @@ div.profile_animator_wrapper {
   position: relative;
   min-width: globals.pxToRem(300);
   min-height: globals.pxToRem(300);
+  height: fit-content;
+  align-self: flex-start;
 
   div.profile_img_wrapper {
     position: absolute;
@@ -105,6 +107,10 @@ div.profile_animator_wrapper {
       animation: rotating 7s infinite forwards linear,
         waving 5s infinite forwards linear;
     }
+  }
+
+  @media screen and (max-width: 1100px) {
+    align-self: center;
   }
 
   @media screen and (max-width: 580px) {
