feat: add projects section

--- a/src/app/pages/components/Projects-Skills/Projects-Skills.component.html
+++ b/src/app/pages/components/Projects-Skills/Projects-Skills.component.html
@@ -1,5 +1,6 @@
 <section class="center">
-<p>projects-skills-page works!</p>
-  <mat-divider [vertical]="true" />
+  <cv-projects />
+  <mat-divider [vertical]="true" class="vertical" />
+  <mat-divider [vertical]="false" class="horizontal" />
   <cv-skills />
 </section>
