--- a/src/app/pages/components/Projects-Skills/skills/skill-item/skill-item.component.html
+++ b/src/app/pages/components/Projects-Skills/skills/skill-item/skill-item.component.html
@@ -1,2 +1,2 @@
-<p>{{ skill }}</p>
-<span [ngStyle]="{ 'background-image': getConicGradient() }"></span>
+<p>{{ skill() }}</p>
+<span [ngStyle]="{ 'background-image': conicGradient() }"></span>
