--- a/src/app/pages/components/Education/education-item/education-item.component.html
+++ b/src/app/pages/components/Education/education-item/education-item.component.html
@@ -2,27 +2,27 @@
   <article>
     <header>
       <h3>
-        @if(educationItem?.level; as level){
+        @if(educationItem().level; as level){
         <b>{{ level }}</b> of }
-        {{ educationItem?.specialty }}
+        {{ educationItem().specialty }}
       </h3>
       <div class="education_info">
-        <h4>{{ educationItem?.school }}</h4>
+        <h4>{{ educationItem().school }}</h4>
         <p>
           [
-          {{ educationItem?.start | date : "MMMM, yyyy" }}
-          - @if (educationItem?.isOngoing) { Ongoing } @else {
-          {{ educationItem?.end | date : "MMMM, yyyy" }}
+          {{ educationItem().start | date : "MMMM, yyyy" }}
+          - @if (educationItem().isOngoing) { Ongoing } @else {
+          {{ educationItem().end | date : "MMMM, yyyy" }}
           } ]
         </p>
       </div>
     </header>
     <main>
       <p>
-        Country: <b>{{ educationItem?.country }}</b>
+        Country: <b>{{ educationItem().country }}</b>
       </p>
       <mat-icon>horizontal_rule</mat-icon>
-      <a [href]="educationItem?.url" target="_blank">
+      <a [href]="educationItem().url" target="_blank">
         <mat-icon>link</mat-icon>
       </a>
     </main>
