--- a/src/app/pages/components/Projects-Skills/projects/project-item/project-item.component.html
+++ b/src/app/pages/components/Projects-Skills/projects/project-item/project-item.component.html
@@ -1,11 +1,11 @@
 <article>
   <header>
-    <h4>{{ project?.title }}</h4>
+    <h4>{{ project().title }}</h4>
   </header>
   <main>
-    <p>{{ project?.description }}</p>
+    <p>{{ project().description }}</p>
     <ul>
-      @for (tag of project?.tags; track $index) {
+      @for (tag of project().tags; track $index) {
       <li>
         <mat-chip>
           {{ tag }}
@@ -15,13 +15,17 @@
     </ul>
   </main>
   <footer>
-    @if (project?.deploymentUrl) {
-    <a [href]="project?.deploymentUrl" matTooltip="Source code" target="_blank">
+    @if (project().deploymentUrl) {
+    <a
+      [href]="project().deploymentUrl"
+      matTooltip="Source code"
+      target="_blank"
+    >
       <mat-icon>code</mat-icon>
     </a>
     }
     <a
-      [href]="project?.repositoryUrl"
+      [href]="project().repositoryUrl"
       matTooltip="Deployed website"
       target="_blank"
     >
