feat: make nav links dynamic

--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -1,43 +1,16 @@
 <nav class="center">
   <ul>
-    <li>
-      <a data-link [routerLink]="['/home']" routerLinkActive="active_link">
-        hOme
-      </a>
-    </li>
-    <li>
-      <a data-link [routerLink]="['/about']" routerLinkActive="active_link">
-        aBout
-      </a>
-    </li>
+    @for (navPath of NAV_PATHS; track $index) {
     <li>
       <a
         data-link
-        [routerLink]="['/projects-skills']"
+        [routerLink]="[navPath.route]"
         routerLinkActive="active_link"
       >
-        pRojects / sKills
+        {{ navPath.title }}
       </a>
     </li>
-    <li>
-      <a data-link [routerLink]="['/education']" routerLinkActive="active_link">
-        eDucation
-      </a>
-    </li>
-    <li>
-      <a
-        data-link
-        [routerLink]="['/experience']"
-        routerLinkActive="active_link"
-      >
-        eXperience
-      </a>
-    </li>
-    <li>
-      <a data-link [routerLink]="['/contact']" routerLinkActive="active_link">
-        cOntact
-      </a>
-    </li>
+    }
   </ul>
   <button
     mat-icon-button
@@ -47,59 +20,16 @@
     <mat-icon>menu</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
+    @for (navPath of NAV_PATHS; track $index) {
     <a
       mat-menu-item
-      [routerLink]="['/home']"
+      [routerLink]="[navPath.route]"
       routerLinkActive
-      #homeRef="routerLinkActive"
-      [disabled]="homeRef.isActive"
+      #ref="routerLinkActive"
+      [disabled]="ref.isActive"
     >
-      HOME
+      {{ navPath.title }}
     </a>
-    <a
-      mat-menu-item
-      [routerLink]="['/about']"
-      routerLinkActive
-      #aboutRef="routerLinkActive"
-      [disabled]="aboutRef.isActive"
-    >
-      ABOUT
-    </a>
-    <a
-      mat-menu-item
-      [routerLink]="['/projects-skills']"
-      routerLinkActive
-      #projectsSkillsRef="routerLinkActive"
-      [disabled]="projectsSkillsRef.isActive"
-    >
-      PROJECTS / SKILLS
-    </a>
-    <a
-      mat-menu-item
-      [routerLink]="['/education']"
-      routerLinkActive
-      #educationRef="routerLinkActive"
-      [disabled]="educationRef.isActive"
-    >
-      EDUCATION
-    </a>
-    <a
-      mat-menu-item
-      [routerLink]="['/experience']"
-      routerLinkActive
-      #experienceRef="routerLinkActive"
-      [disabled]="experienceRef.isActive"
-    >
-      EXPERIENCE
-    </a>
-    <a
-      mat-menu-item
-      [routerLink]="['/contact']"
-      routerLinkActive
-      #contactRef="routerLinkActive"
-      [disabled]="contactRef.isActive"
-    >
-      CONTACT
-    </a>
+    }
   </mat-menu>
 </nav>
