--- a/src/app/pages/components/Projects-Skills/Projects-Skills.component.html
+++ b/src/app/pages/components/Projects-Skills/Projects-Skills.component.html
@@ -1,5 +1,5 @@
 <section class="center">
   <cv-skills />
-  <mat-divider [vertical]="false" class="horizontal" />
+  <mat-divider />
   <cv-projects />
 </section>
