--- a/src/app/pages/components/Experience/Experience.component.html
+++ b/src/app/pages/components/Experience/Experience.component.html
@@ -1,1 +1,13 @@
-<p>experience-page works!</p>
+<section class="center">
+  <h2>Experience</h2>
+  <ul>
+    @if(!(isLoading$() | async)){ @for (experience of (experiences$() | async);
+    track $index) {
+    <li>
+      <cv-experience-item [experience]="experience" />
+    </li>
+    } } @else {
+    <cv-loader />
+    }
+  </ul>
+</section>
