--- a/src/app/pages/components/Experience/experience-item/experience-item.component.html
+++ b/src/app/pages/components/Experience/experience-item/experience-item.component.html
@@ -4,7 +4,8 @@
     <div>
       <h4>{{ experience().company }}</h4>
       <p>
-        [ <span>{{ experience().start | dating }}</span> -
+        [
+        <span>{{ experience().start | dating }}</span> -
         <span>{{ experience().end | dating }}</span>
         ]
       </p>
@@ -17,7 +18,10 @@
       <p><strong>Country</strong>: {{ experience().country }}</p>
     </section>
     <section class="description">
-      <p>{{ experience().description }}</p>
+      <p>{{ experience().description | truncate : 150 : isTruncated() }}</p>
+      <button (click)="toggleTruncate()">
+        [Show @if (isTruncated()) {more} @else {less}]
+      </button>
     </section>
   </main>
 </article>
