--- a/src/app/pages/components/Contact/Contact.component.html
+++ b/src/app/pages/components/Contact/Contact.component.html
@@ -3,7 +3,7 @@
     <div class="profile_img_wrapper">
       <div class="img_bkg"></div>
       <img
-        src="../../../../assets/Luka_Bilbao-Munios.jpg"
+        src="assets/Luka_Bilbao-Munios.jpg"
         alt="Luka Bilbao-Munios head-shot"
       />
     </div>
