feat: add new skill badge feature

--- a/src/app/pages/components/Projects-Skills/skills/skill-item/skill-item.component.html
+++ b/src/app/pages/components/Projects-Skills/skills/skill-item/skill-item.component.html
@@ -1,2 +1,9 @@
-<p>{{ skill() }}</p>
+<p
+  [matBadge]="isNew() ? 'NEW' : null"
+  matBadgeOverlap="false"
+  matBadgePosition="after"
+  matBadgeColor="warn"
+>
+  {{ skill() }}
+</p>
 <span [ngStyle]="{ 'background-image': conicGradient() }"></span>
