feat: update date handling

--- a/src/app/pages/components/Projects-Skills/skills/skills.component.html
+++ b/src/app/pages/components/Projects-Skills/skills/skills.component.html
@@ -7,7 +7,7 @@
       <cv-skill-item
         [level]="skill.level"
         [skill]="skill.skill"
-        [date]="skill.date"
+        [createdAt]="skill.createdAt"
       />
     </li>
     }
